--- a/style.css
+++ b/style.css
@@ -4,3 +4,14 @@ body {
   font-family: "Courier New", Courier, monospace;
   background: lightgray;
 }
+
+.container {
+  background: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  margin-top: 50px;
+  text-align: center;
+  max-width: 600px;
+  border-radius: 5px;
+  padding: 20px;
+}
