style the text input

--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ form {
   align-items: center;
   margin-bottom: 20px;
 }
+
+form input[type="text"] {
+  padding: 10px;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  width: 60%;
+}
