--- a/style.css
+++ b/style.css
@@ -30,3 +30,14 @@ form input[type="text"] {
   font-size: 18px;
   width: 60%;
 }
+
+form input[type="submit"] {
+  background: #007bff;
+  color: #ffff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  outline: none;
+}
