--- a/style.css
+++ b/style.css
@@ -49,4 +49,14 @@ form input[type="submit"]:hover {
 
 .icon img {
   width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.temperature {
+  font-size: 48px;
+  font-weight: bold;
+  margin: 20px 0;
 }
