--- a/style.css
+++ b/style.css
@@ -60,3 +60,15 @@ form input[type="submit"]:hover {
   font-weight: bold;
   margin: 20px 0;
 }
+
+.description {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
