--- a/style.css
+++ b/style.css
@@ -72,3 +72,13 @@ form input[type="submit"]:hover {
   align-items: center;
   flex-wrap: wrap;
 }
+
+.details > div {
+  padding: 20px;
+  background-color: #f1f1f1;
+  margin: 10px;
+  flex: 1;
+  border-radius: 5px;
+  text-align: center;
+  min-height: 45px;
+}
